--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="music-content">
       <div class="embed">
         <h3>TXT Playlist</h3>
-        <iframe src="https://open.spotify.com/embed/playlist/YOUR_PLAYLIST_ID" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://open.spotify.com/embed/playlist/41BClsnymzZo1Tc3xCroHO" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       </div>
       <div class="embed">
         <h3>Conan Gray Faves</h3>
-        <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" width="300" height="170" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/qMHkWgOE6X8" width="300" height="170" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="extra-content">
         <button id="generate-song">🎵 TXT Song of the Day</button>
