--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
         <div class="wallpapers">
           <h3>🖼 Conan Gray Quote Wallpapers</h3>
-          <img src="conan-wallpaper1.jpg" alt="Conan Quote 1">
-          <img src="conan-wallpaper2.jpg" alt="Conan Quote 2">
+          <img src="images/conan-wallpaper1.jpeg" alt="Conan Quote 1">
+          <img src="images/conan-wallpaper2.jpeg" alt="Conan Quote 2">
         </div>
       </div>
     </div>
