--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <h2>🎶 TXT & Conan Gray</h2>
     <div class="music-content">
       <div class="embed">
-        <h3>TXT Playlist</h3>
-        <iframe src="https://open.spotify.com/embed/playlist/41BClsnymzZo1Tc3xCroHO" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <h3>Playlist Just For You!</h3>
+        <iframe src="https://open.spotify.com/embed/playlist/41BClsnymzZo1Tc3xCroHO" width="300" height="170" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       </div>
       <div class="embed">
         <h3>Conan Gray Faves</h3>
-        <iframe src="https://www.youtube.com/embed/qMHkWgOE6X8" width="300" height="350" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/qMHkWgOE6X8" width="300" height="170" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="extra-content">
         <button id="generate-song">🎵 TXT Song of the Day</button>
