--- a/index.html
+++ b/index.html
@@ -28,28 +28,27 @@
   </section>
 
   <section id="music">
-    <h2>🎶 TXT & Conan Gray</h2>
-    <div class="music-content">
-      <div class="embed">
-        <h3>Playlist Just For You!</h3>
-        <iframe src="https://open.spotify.com/embed/playlist/41BClsnymzZo1Tc3xCroHO" width="300" height="170" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-      </div>
-      <div class="embed">
-        <h3>Conan Gray Faves</h3>
-        <iframe src="https://www.youtube.com/embed/qMHkWgOE6X8" width="300" height="170" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <div class="extra-content">
-        <button id="generate-song">🎵 TXT Song of the Day</button>
-        <p id="song-output"></p>
-
-        <div class="wallpapers">
-          <h3>🖼 Conan Gray Quote Wallpapers</h3>
-          <img src="images/conan-wallpaper1.jpeg" alt="Conan Quote 1">
-          <img src="images/conan-wallpaper2.jpeg" alt="Conan Quote 2">
-        </div>
-      </div>
+  <h2>🎶 TXT & Conan Gray</h2>
+  <div class="music-wrapper">
+    <div class="music-card">
+      <h3>TXT Playlist</h3>
+      <iframe 
+        src="https://open.spotify.com/embed/playlist/41BClsnymzZo1Tc3xCroHO" 
+        frameborder="0"
+        allowtransparency="true"
+        allow="encrypted-media">
+      </iframe>
     </div>
-  </section>
+    <div class="music-card">
+      <h3>Conan Gray - Heather</h3>
+      <iframe 
+        src="https://www.youtube.com/embed/qMHkWgOE6X8" 
+        frameborder="0" 
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+</section>
 
   <section id="letter">
     <h2>💌 Love Letter</h2>
