--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="particles-js"></div>
 
   <header>
     <h1>🎁 A Special Website for You</h1>
@@ -83,17 +84,24 @@
     });
   </script>
 
-  <script>
-  // Sakura Petal Animation
-  const totalPetals = 20;
-
-  for (let i = 0; i < totalPetals; i++) {
-    let petal = document.createElement("div");
-    petal.classList.add("sakura");
-    petal.style.left = Math.random() * 100 + "vw";
-    petal.style.animationDelay = Math.random() * 5 + "s";
-    document.body.appendChild(petal);
-  }
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script>
+  particlesJS("particles-js", {
+    "particles": {
+      "number": { "value": 60 },
+      "size": { "value": 4 },
+      "color": { "value": "#ffb6c1" },
+      "opacity": { "value": 0.6 },
+      "move": { "speed": 1 },
+      "line_linked": {
+        "enable": true,
+        "distance": 150,
+        "color": "#d6336c",
+        "opacity": 0.3,
+        "width": 1
+      }
+    }
+  });
 </script>
 
 </body>
