--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <h2>📚 Favorite Books</h2>
     <div class="book-list">
       <div class="book">
-        <h3>Book Title One</h3>
-        <p>A beautiful quote or a tiny review.</p>
+        <h3>God of Small Things</h3>
+        <p>Things can change in a day. A day can change a lot of things.</p>
       </div>
       <div class="book">
-        <h3>Book Title Two</h3>
-        <p>A line of fan art or indie bookstore link.</p>
+        <h3>We Were Liars</h3>
+        <p>We are liars. We are beautiful and privileged. We are cracked and broken.</p>
       </div>
     </div>
   </section>
@@ -35,7 +35,7 @@
     <h2>🎶 TXT & Conan Gray</h2>
     <div class="music-wrapper">
       <div class="music-card">
-        <h3>TXT Playlist</h3>
+        <h3>Playlist!!</h3>
         <iframe 
           src="https://open.spotify.com/embed/playlist/41BClsnymzZo1Tc3xCroHO" 
           frameborder="0"
@@ -44,7 +44,7 @@
         </iframe>
       </div>
       <div class="music-card">
-        <h3>Conan Gray - Heather</h3>
+        <h3>Some Conan Gray, cuz why not!</h3>
         <iframe 
           src="https://www.youtube.com/embed/qMHkWgOE6X8" 
           frameborder="0" 
@@ -55,12 +55,12 @@
   </section>
 
   <section id="letter">
-    <h2>💌 Love Letter</h2>
-    <p>Dear [Friend's Name],</p>
+    <h2>💌 Virtual Letter</h2>
+    <p>Dear Manya,</p>
     <p>
       I just wanted to say how grateful I am for you. You've been there in my happiest and darkest days. This little website is my way of saying thank you 💕.
     </p>
-    <p>Forever your friend, <br><strong>[Your Name]</strong></p>
+    <p>Forever your friend, <br><strong><3</strong></p>
   </section>
 
   <section id="memories">
@@ -68,22 +68,17 @@
     <div class="slideshow">
       <div class="polaroid">
         <img src="images/photo1.jpg" alt="Memory 1" />
-        <p>Our first hangout 💬</p>
+        <p>Our Hangout 💬</p>
       </div>
       <div class="polaroid">
         <img src="images/photo2.jpg" alt="Memory 2" />
         <p>A random funny day 😄</p>
       </div>
     </div>
-
-    <div class="story-snippet">
-      <h3>Mini-Novel: Chapter 1</h3>
-      <p>Once upon a time, two amazing people crossed paths...</p>
-    </div>
   </section>
 
   <footer>
-    <p>Made with 💗 by [Your Name]</p>
+    <p>Made with 💗</p>
   </footer>
 
   <!-- TXT Song Generator Script (Optional, hidden now) -->
