--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <h2>📸 Our Memories</h2>
     <div class="slideshow">
       <div class="polaroid">
-        <img src="images/photo1.jpg" alt="Memory 1" />
+        <img src="images/photo1.jpeg" alt="Memory 1" />
         <p>Our Hangout 💬</p>
       </div>
       <div class="polaroid">
-        <img src="images/photo2.jpg" alt="Memory 2" />
+        <img src="images/photo2.jpeg" alt="Memory 2" />
         <p>A random funny day 😄</p>
       </div>
     </div>
