--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div id="particles-js"></div>
 
   <header>
-    <h1>🎁 A Special Website for You</h1>
-    <p>Made with love 💖</p>
+    <h1>🎁 A Special Gift for You</h1>
+    <p>Happiest Birthdayyy 💖</p>
   </header>
 
   <section id="books">
